# ArticleAnalyser

./: Article_analysis_v1.py  Article_analysis_v2.py  Form_analysis.py  README.md  form.py  pyproject.toml  simplify_word.py
public/: known.txt
