[tool.poetry]
name = "article_analysis"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
PyQt6 = "^6.3.1"
pep517 = "^0.13.0"
numpy = "^1.23.3"
scipy = "^1.9.1"
Pattern = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
